--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <br>
 
-<a href="./maps/test1/index1.html" target="_blank">Primer mapa</a> 
+<a href="./maps/test/index.html" target="_blank">Primer mapa</a> 
 
 
- <iframe src="./maps/test1/index1.html" title="Mapa 1" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style="border:none;">
+ <iframe src="./maps/test/index.html" title="Mapa 1" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style="border:none;">
  </iframe>
  
 
