--- a/index.html
+++ b/index.html
@@ -43,18 +43,21 @@
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Saber més</div>
         <img src="images/docs/Imagen2.png" alt="House" style="width:100%">
+        <h3 class="image-caption">Muntanyes de Prades</h3>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Saber més</div>
         <img src="images/docs/Imagen4.png" alt="House" style="width:100%">
+      <h3 class="image-caption">El nostre projecte</h3>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Saber més</div>
         <img src="images/docs/Imagen3.png" alt="House" style="width:100%">
+      <h3 class="image-caption">Cremes prescrites</h3>
       </div>
     </div>
     
