--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <a href="#home" class="w3-bar-item w3-button"><b>Fire</b> Forest Management</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">Sobre nosaltres</a>
+      <a href="fire_forest/sobre nosaltres.html" class="w3-bar-item w3-button">Sobre nosaltres</a>
       <a href="#about" class="w3-bar-item w3-button">Els incendis</a>
       <a href="#contact" class="w3-bar-item w3-button">Prevenció</a>
       <a href="#contact" class="w3-bar-item w3-button">Contacte</a>
