--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="fire_forest/sobre nosaltres.html" class="w3-bar-item w3-button">Sobre nosaltres</a>
-      <a href="#about" class="w3-bar-item w3-button">Els incendis</a>
+      <a href="fire_forest/incendis.html" class="w3-bar-item w3-button">Els incendis</a>
       <a href="#contact" class="w3-bar-item w3-button">Prevenció</a>
       <a href="#contact" class="w3-bar-item w3-button">Contacte</a>
     </div>
