--- a/sobre nosaltres.html
+++ b/sobre nosaltres.html
@@ -14,9 +14,9 @@
     <a href="#home" class="w3-bar-item w3-button"><b>Fire</b> Forest Management</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">Sobre nosaltres</a>
-      <a href="#about" class="w3-bar-item w3-button">Els incendis</a>
-      <a href="#contact" class="w3-bar-item w3-button">Prevenció</a>
+       <a href="fire_forest/sobre nosaltres.html" class="w3-bar-item w3-button">Sobre nosaltres</a>
+      <a href="fire_forest/incendis.html" class="w3-bar-item w3-button">Els incendis</a>
+      <a href="fire_forest/cremes.html" class="w3-bar-item w3-button">Prevenció</a>
       <a href="#contact" class="w3-bar-item w3-button">Contacte</a>
     </div>
   </div>
