--- a/sobre nosaltres.html
+++ b/sobre nosaltres.html
@@ -9,19 +9,11 @@
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>Fire</b> Forest Management</a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-       <a href="fire_forest/sobre nosaltres.html" class="w3-bar-item w3-button">Sobre nosaltres</a>
-      <a href="fire_forest/incendis.html" class="w3-bar-item w3-button">Els incendis</a>
-      <a href="fire_forest/cremes.html" class="w3-bar-item w3-button">Prevenció</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contacte</a>
-    </div>
+<div class="menu-container"></div>
+  <div class="content-container">
+    <div class="content">
+      <div class="content-table flex-column">
   </div>
-</div>
-
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
   <img class="w3-image" src="images/docs/Imagen1.png" alt="Architecture" width="1500" height="800">
