--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,7 @@
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+<div class="menu">. 
+  <div class="menu-table flex-row-space-between">
+    <div class="logo flex-row-center">
     <a href="#home" class="w3-bar-item w3-button"><b>Fire</b> Forest Management</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
@@ -11,3 +12,4 @@
     </div>
   </div>
 </div>
+</div>  
