--- a/menu.html
+++ b/menu.html
@@ -1,18 +1,12 @@
-<div class="menu">. 
-  <div class="menu-table flex-row-space-between">
-    <div class="logo flex-row-center">
-      <img class="break-long-url" target="_blank" href="https://sergihermosilla.github.io/VisualDronSalou/index.html" src="imagenes/Visual-dron-salou-_1_.ico">
-      <a href="index.html">VUELA ALTO PARA QUE EL MUNDO TE VEA</a>
-        <a class="menu-button" tabindex="0" href="javascript:void(0)">
-      <img src="img/menu.png">
-        </a>
-    <div class="menu-items flex-row-center flex-item">
-      <a href="index.html" class="menu-index">Inicio</a>
-      <a href="widgets.html" class="menu-widget">Proyectos</a>
-      <a href="maps.html" class="menu-maps">Mapas</a>
-      <a href="embedding.html" class="menu-embedding">¿Quiénes somos?</a>
-      <a href="contact.html" class="menu-contact">Contactar</a>
-      <a href="https://github.com/sergihermosilla/VisualDronSalou">GitHub</a>
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="#home" class="w3-bar-item w3-button"><b>Fire</b> Forest Management</a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="fire_forest/sobre nosaltres.html" class="w3-bar-item w3-button">Sobre nosaltres</a>
+      <a href="fire_forest/incendis.html" class="w3-bar-item w3-button">Els incendis</a>
+      <a href="fire_forest/cremes.html" class="w3-bar-item w3-button">Prevenció</a>
+      <a href="#contact" class="w3-bar-item w3-button">Contacte</a>
     </div>
-  </div> 
+  </div>
 </div>
