--- a/sobre nosaltres.html
+++ b/sobre nosaltres.html
@@ -11,7 +11,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>Fire</b> Forest Management</a>
+    <a href="index.html" class="w3-bar-item w3-button"><b>Fire</b> Forest Management</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="sobre nosaltres.html" class="w3-bar-item w3-button">Sobre nosaltres</a>
